# ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_coding_agent/: __init__.py  cli.py  code_agent.py  config.py  github_client.py  llm_client.py  reviewer_agent.py
app/: __init__.py  code_modifier.py  config.py  database.py  github_client.py  main.py  orchestrator.py  repository_analyzer.py  reviewer.py
app/github_app/: __init__.py  auth.py
app/routers/: __init__.py  admin.py  health.py  webhook.py
data/: app.db
tests/: __init__.py  conftest.py  test_ci_failure_handling.py  test_cli.py  test_code_modifier.py  test_config.py  test_orchestrator_architecture.py  test_repository_analyzer.py
